# winkicord

./: .gitignore  .gitpod.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example.py
winkicord/: __init__.py  music.py  nodepool.py
