[project]
name = "winkicord"
version = "1.0.0"
authors = [
  { name="Ujjwal Srivastava", email="ujjwal.winklebot@proton.me" },
]
description = "Effortlessly create a fully functional Discord music bot with just one line of Python code."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"